update consul under process

--- a/ez-caffeine/pom.xml
+++ b/ez-caffeine/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>cn.zenliu.ktor</groupId>
             <artifactId>properties</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
