--- a/ez-auth/pom.xml
+++ b/ez-auth/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>cn.zenliu.ktor</groupId>
             <artifactId>properties</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>io.ktor</groupId>
