--- a/ez-ebean/pom.xml
+++ b/ez-ebean/pom.xml
@@ -14,8 +14,7 @@
         <dependency>
             <groupId>cn.zenliu.ktor</groupId>
             <artifactId>properties</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-<!--            <version>${project.parent.version}</version>-->
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>io.ebean</groupId>
@@ -29,8 +28,7 @@
         <dependency>
             <groupId>cn.zenliu.ktor</groupId>
             <artifactId>ez-hikari</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-<!--            <version>${project.parent.version}</version>-->
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
