--- a/ez-kmongo/pom.xml
+++ b/ez-kmongo/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>cn.zenliu.ktor</groupId>
             <artifactId>properties</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.litote.kmongo</groupId>
