--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>ez-caffeine</module>
         <module>ez-kmongo</module>
         <module>ez-ignite</module>
+        <module>ez-consul</module>
     </modules>
     <groupId>cn.zenliu.ktor</groupId>
     <artifactId>ktor-features</artifactId>
@@ -24,15 +25,17 @@
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <kotlin.version>1.3.70</kotlin.version>
-        <ebean.version>12.1.13</ebean.version>
-        <ktor.version>1.3.0</ktor.version>
+        <kotlin.version>1.3.72</kotlin.version>
+        <serialization.version>0.20.0</serialization.version>
+        <ktor.version>1.3.1</ktor.version>
+
+        <ebean.version>12.2.4</ebean.version>
         <logback.version>1.2.3</logback.version>
-        <config4k.version>0.4.1</config4k.version>
-        <jackson.version>2.10.1</jackson.version>
+        <config4k.version>0.4.2</config4k.version>
+        <jackson.version>2.10.3</jackson.version>
         <hikari.version>3.4.2</hikari.version>
         <lettuce.version>5.2.2.RELEASE</lettuce.version>
-        <reactor.version>3.3.2.RELEASE</reactor.version>
+        <reactor.version>3.3.4.RELEASE</reactor.version>
         <reactor-kotlin.version>1.0.2.RELEASE</reactor-kotlin.version>
         <liquibase.version>3.8.7</liquibase.version>
         <jooq.version>3.13.0</jooq.version>
@@ -40,6 +43,7 @@
         <caffeine.version>2.8.1</caffeine.version>
         <kmongo.version>3.11.2</kmongo.version>
         <ignite.version>2.8.0</ignite.version>
+        <okhttp.version>4.2.2</okhttp.version>
     </properties>
     <repositories>
         <repository>
@@ -53,6 +57,29 @@
     </repositories>
     <dependencyManagement>
         <dependencies>
+            <!--bom kotlin-->
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-bom</artifactId>
+                <version>${kotlin.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--bom ktor-->
+            <dependency>
+                <groupId>io.ktor</groupId>
+                <artifactId>ktor-bom</artifactId>
+                <version>${ktor.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!-- okhttp-->
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
+                <scope>provided</scope>
+            </dependency>
             <!-- mongo -->
             <dependency>
                 <groupId>org.litote.kmongo</groupId>
@@ -67,26 +94,6 @@
                 <version>${caffeine.version}</version>
             </dependency>
 
-            <!--            kt-->
-            <dependency>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-reflect</artifactId>
-                <version>${kotlin.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-stdlib-jdk8</artifactId>
-                <version>${kotlin.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-test</artifactId>
-                <version>${kotlin.version}</version>
-                <scope>test</scope>
-            </dependency>
             <!--            ebean-->
             <dependency>
                 <groupId>io.ebean</groupId>
@@ -398,6 +405,7 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -412,6 +420,7 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -480,13 +489,19 @@
                             <!--                            <arg>-Xcoroutines=enable</arg>-->
                         </args>
                         <compilerPlugins>
-                            <plugin>all-open</plugin>
+<!--                            <plugin>all-open</plugin>-->
+                            <plugin>kotlinx-serialization</plugin>
                         </compilerPlugins>
                     </configuration>
                     <dependencies>
-                        <dependency>
+                       <!-- <dependency>
                             <groupId>org.jetbrains.kotlin</groupId>
                             <artifactId>kotlin-maven-allopen</artifactId>
+                            <version>${kotlin.version}</version>
+                        </dependency>-->
+                        <dependency>
+                            <groupId>org.jetbrains.kotlin</groupId>
+                            <artifactId>kotlin-maven-serialization</artifactId>
                             <version>${kotlin.version}</version>
                         </dependency>
                     </dependencies>
