--- a/ez-camunda/pom.xml
+++ b/ez-camunda/pom.xml
@@ -35,5 +35,11 @@
             <artifactId>properties</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
